--- a/Portfolio 3 markdown (thesis study 1).Rmd
+++ b/Portfolio 3 markdown (thesis study 1).Rmd
@@ -20,13 +20,14 @@ The main packages I need are lavaan and lmertest, but semPlot is used to create 
 
 library('psych')
 library('reshape2')
-library('plyr')
+library('dplyr')
 library('lavaan')
 library('Rcpp')
 library('lme4')
 library('lmerTest')
 library('OpenMx')
 library('semPlot')
+library('tidyverse')
 rm(list=ls())
 
 ##### Bringing in the data
@@ -35,18 +36,59 @@ rm(list=ls())
 >Will pull the data tomorrow to practice this
 
 ```{r bringing in data}
-
-View(Classroom_Experiences)
+study1 <- read.csv("~/Master's Program Wake Forest/Research/Online Belonging/Thesis Study 1/Online Course Experiences (raw data).csv", row.names=NULL, stringsAsFactors=TRUE)
+View(study1)
 ```
 
-##### Data cleaning!
+Ensuring the dataframe is a tibble (be proud, Mason)
+
+as_tibble(study1)
 
 ## Data cleaning
 
 Will need to create composite variable for prompted disclosure out of two items.
 
-> Old data only had one question, so that is not done below. Will add this after finishing the path analysis code
+##### Basic data cleaning
 
+Changing the name of the variable for time spent on the survey.
+
+names(study1)[6] <- 'duration_seconds'
+
+
+### Checking for bad data
+
+Checking for bad actors in the data, before giving credit.
+
+summary(study1$duration_seconds)
+
+```{r Filtering}
+#looking narrowly at people under the 1st quartile (172)
+
+filter(study1, duration_seconds < 172) %>%
+        arrange(duration_seconds)
+```
+
+I found no straight-lining within this subset, which suggests to me that the data was all given in good faith. However, I wanted to look at another subset.
+
+I filtered for students that answered positively on two items that previous research suggest should be opposite, belonging and feeling like an outsider.
+
+```{r}
+filter(study1, school_belong > 4, school_outsider > 4)
+#40 students fall into this category
+
+filter(study1, class_belong > 4, class_outsider > 4)
+#18 students fall into class.
+
+filter(study1, school_belong > 4, school_outsider > 4, class_belong > 4, class_outsider > 4)
+#4 students fall into this category. Only one seemed suspicious, but passed along to Shannon to make a decision.
+
+```
+
+
+```{r}
+
+
+```
 ### Descriptives cleaning
 
 ##### Race dummy coding
