--- a/Portfolio 3 markdown (thesis study 1).Rmd
+++ b/Portfolio 3 markdown (thesis study 1).Rmd
@@ -37,20 +37,20 @@ study1 <- read.csv("~/Master's Program Wake Forest/Research/Online Belonging/The
 View(study1)
 ```
 
+
+##TEMP CHANGE
+Variable cleaning was done using SPSS, which is not what I wanted to do. As such, the data will be returned from SPSS. Full version will have data cleaning done in R.
+
+```{r temporary data returning}
+`study1` <- read.csv("~/Master's Program Wake Forest/Research/Online Belonging/Thesis Study 1/Online Course Experiences (SPSS cleaned).csv")
+View(study1)
+```
+
+
+
 Ensuring the dataframe is a tibble (be proud, Mason)
 
 as_tibble(study1)
-
-## Data cleaning
-
-Will need to create composite variable for prompted disclosure out of two items.
-
-##### Basic data cleaning
-
-Changing the name of the variable for time spent on the survey. Several variable names were changed in excel. Specifically, the names of the gender responses were changed from a number to their actual gender identity (e.g., demog_gender_1 became demog_gender_female)
-
-names(study1)[6] <- 'duration_seconds'
-
 
 ### Checking for bad data
 
@@ -91,15 +91,14 @@ study1 <- subset(study1, select= -c(StartDate, EndDate, Status,	IPAddress, Progr
 
 ```
 
+## Data cleaning
 
-Variable cleaning was done using SPSS, which is less idea than I'd prefer. As such, the data will be returned from SPSS. Full version will have data cleaning done in R.
+Will need to create composite variable for prompted disclosure out of two items.
 
-```{r temporary data returning}
-`study1` <- read.csv("~/Master's Program Wake Forest/Research/Online Belonging/Thesis Study 1/Online Course Experiences (SPSS cleaned).csv")
-View(study1)
-```
+##### Basic data cleaning
 
-as_tibble(study1)
+Several variable names were changed in excel. Specifically, the names of the gender responses were changed from a number to their actual gender identity (e.g., demog_gender_1 became demog_gender_female)
+
 
 ------------------
 
@@ -156,8 +155,19 @@ Race, with white as the reference class:
 Classmates and group members known prior:
         classmates_know groupdesc_know_prior
 
+Looking at the basic information for class disclosure.
+
+```{r}
+summary(study1$class_belong_comp4, study1$school_belong_comp4)
+
+hist(study1$class_disclose_comp2)
+```
+
+
+
 #### Creating the model!
 
+##### Model 1
 ```{r model creation}
 model_1 <-   '  #Class Belonging direct effects
                 class_belong_comp4 ~ a*class_disclose_comp2 + gender_nonbinary +                             gender_male_dummy + race_asian + race_black + race_hispanic +                                race_multiracial + class_know_prior + know_prior_group
@@ -186,33 +196,105 @@ model_1 <-   '  #Class Belonging direct effects
 
 #### Testing the fit
 
-People are mostly at a 1 in disclosure., so we want to look at folk with disclosure.
+```{r testing fit}
+fit <- sem(model_1, data=study1)
 
-hist(study1$class_disclose_comp2)
+summary(fit, fit.measures=TRUE, standardize=TRUE, rsquare=TRUE)
 
+```
+
+> Key variables and significant variables
+class belonging
+     class disclosure 	est.   .189	p=.126
+     group disclosure	est.   .065	p=.649
+     nonbinary 		est. -1.069	p=.058
+     asian		est. -1.037	p=.004
+     class_know_prior	est.   .479	p=.001
+     group_know_prior	est.   .065	p=.065
+school belonging
+     class disclosure	est. -0.144 	p=.170
+     group disclosure   est.   .221	p=.017
+     nonbinary		est.  -.532	p=.269
+     asian		est.  -.676	p=.027
+     class know prior	est.   .297	p=.014
+     group_know_prior	est.  -.122	p=.261
+
+We replicated our finding that Asian student status is a negative predictor of belonging. While marginal for class belonging, non binary is also a negative predictor.
+As expected, class members known prior is a predictor of belonging and group members known is marginal.
+
+I'd like to briefly look at whether international student status is a predictor. 
+>For some reason, this code is wrong?
+
+```{r model 1a}
+model_1a <-   '  #Class Belonging direct effects
+                class_belong_comp4 ~ a*class_disclose_comp2 + gender_nonbinary +                             gender_male_dummy + race_asian + race_black + race_hispanic +                                race_multiracial + class_know_prior + know_prior_group + demog_international
+                
+                class_belong_comp4 ~ b*group_disclose_comp2
+                
+                #School Belonging direct effects
+                school_belong_comp4 ~ c*class_disclose_comp2 + gender_nonbinary +                            gender_male_dummy + race_asian + race_black + race_hispanic +                                race_multiracial + class_know_prior + know_prior_group + demog_international
+                
+                school_belong_comp4 ~ d*group_disclose_comp2
+                
+                #Mediator for class disclosure
+                class_disclose_comp2 ~ e*cdiscl_prompt_comp2
+                class_belong_comp4 ~ cdiscl_prompt_comp2
+                school_belong_comp4 ~ cdiscl_prompt_comp2
+                
+                #Mediator for group disclosure
+                group_disclose_comp2 ~ f*gdiscl_prompt_comp2
+                class_belong_comp4 ~ gdiscl_prompt_comp2
+                school_belong_comp4 ~ gdiscl_prompt_comp2
+                
+                #removing correlation between prompted disclosures
+                cdiscl_prompt_comp2 ~~ 0*gdiscl_prompt_comp2'
+```
+
+
+```{r testing fit}
+fit <- sem(model_1a, data=study1)
+
+summary(fit, fit.measures=TRUE, standardize=TRUE, rsquare=TRUE)
+
+```
+
+
+Class disclosure is not predicting class belonging or school belonging, which is odd. So I want to find out why.
+
+
+This may be because people are mostly at a 1 in disclosure., so we want to look at folk with disclosure.
+
+
+```{r}
 study1 %>%
         group_by(group_use) %>%
         summarize(freq=n())
+#Most people are saying they don't use groups at all
 
+#Graphing thie relationship between class disclosure and class belonging.
 plot(study1$class_disclose_comp2, study1$class_belong_comp4)
-
-```{r running with only people who have dislosure at all}
-study1a <- study1[study1$class_disclose_comp2 > 1,]
-
-
 ```
+
+The graph makes it clear that there's pretty wide variance for the people with no class disclosure that may be stifling the variance from appearing in the model.
+
+```{r}
+basic_correlations <- gather(study1, class_belong_comp4)
+```
+
+
+```{r running with only people who have some disclosure}
+study1a <- study1[study1$class_disclose_comp2 > 1,]
+```
+
 
 ```{r testing fit}
 fit <- sem(model_1, data=study1a)
 
 summary(fit, fit.measures=TRUE, standardize=TRUE, rsquare=TRUE)
+
 ```
 
-```{r testing fit}
-fit <- sem(model_1, data=study1)
 
-summary(fit, fit.measures=TRUE, standardize=TRUE, rsquare=TRUE)
-```
 
 #### Graphing!
 
@@ -230,6 +312,43 @@ semPaths(fit, whatLabels="par", layout="tree", nCharNodes=0, sizeMan=12, sizeMan
 fit <- sem(model_1, data=Classroom_Experiences, se="bootstrap", bootstrap = 10000)
 summary(fit, fit.measures=TRUE, standardize=TRUE, rsquare=TRUE)
 ```
+
+
+##### Model 2
+
+While the above model is good, it is washing out a lot of data from the class disclosure, as we only got responses for group disclosure from students who did meet in groups. As such, we're interested in the full class disclosure data set.
+
+```{r no group disclosure model}
+model_2 <-   '  #Class Belonging direct effects
+                class_belong_comp4 ~ a*class_disclose_comp2 + gender_nonbinary +                             gender_male_dummy + race_asian + race_black + race_hispanic +                                race_multiracial + class_know_prior
+                
+                #School Belonging direct effects
+                school_belong_comp4 ~ c*class_disclose_comp2 + gender_nonbinary +                            gender_male_dummy + race_asian + race_black + race_hispanic +                                race_multiracial + class_know_prior
+                
+                #Mediator for class disclosure
+                class_disclose_comp2 ~ e*cdiscl_prompt_comp2
+                class_belong_comp4 ~ cdiscl_prompt_comp2
+                school_belong_comp4 ~ cdiscl_prompt_comp2
+                '
+```
+
+```{r testing fit}
+fit <- sem(model_2, data=study1)
+
+summary(fit, fit.measures=TRUE, standardize=TRUE, rsquare=TRUE)
+
+```
+
+Class disclosure is predictive of class belonging, but not of institutional belonging.
+
+> Key variable
+                         Estimate  Std.Err  z-value  P(>|z|)
+  Class belonging                                                      
+    class disclosure       0.325    0.096    3.377    0.001
+  school belonging                                                      
+    class disclosure       0.114    0.085    1.334    0.182
+    
+This means that class disclosure is getting washed out by the removal of the additional variables, or that it is being accounted for by group disclosure. Something worth looking at is whether     
 
 # What does the data mean?
 
